fix gapの値変更

--- a/css/company.css
+++ b/css/company.css
@@ -5,7 +5,7 @@
 
 @media screen and (min-width: 768px) {
   .youtube-list {
-    gap: 5%;
+    gap: 10%;
     padding: 0;
     flex-direction: row;
   }
